fix gnome3 / gtk3 scrollbars

--- a/src/usr/share/themes/Lubuntu-default/gtk-3.0/gtk-lubuntu.css
+++ b/src/usr/share/themes/Lubuntu-default/gtk-3.0/gtk-lubuntu.css
@@ -221,98 +221,6 @@ GtkMenuToolButton.menu .menuitem *:insensitive,
     border-color: #9CB8B8;
 }
 
-/*************
- * Scrollbar *
- *************/
-.scrollbar {
-	background-image: none;
-	border-style: solid;
-	-GtkRange-trough-border: 0;
-	-GtkRange-arrow-scaling: 0.444;
-	-GtkRange-slider-width: 10;
-	-GtkRange-stepper-size: 0;
-	-GtkScrollbar-min-slider-length: 30;
-	-GtkRange-stepper-spacing: 0;
-	-GtkRange-trough-under-steppers: 1;
-	-unico-inner-stroke-style: none;
-}
-
-.scrollbar,
-.scrollbar.vertical,
-.scrollbar.horizontal {
-    -GtkScrollbar-has-backward-stepper: 0;
-    -GtkScrollbar-has-forward-stepper: 0;
-    -GtkRange-slider-width: 12px;
-    border-radius: 10px;
-    border-image: none;
-}
-
-/* Through */
-.scrollbar.trough.vertical,
-.scrollbar.trough.horizontal {
-	background-image: -gtk-gradient (linear,
-		left top, right top,
-		from (shade (@trough_bg_color_b, 0.99)),
-		to (@trough_bg_color_a));
-	background-color: shade (@theme_bg_color, 0.882);
-	border-radius: 0;
-	-adwaita-border-gradient: -gtk-gradient (linear,
-		left top, right top,
-		from (alpha (@scrollslider_gradient_a, 1.00)),
-		to (alpha (@scrollslider_gradient_a, 0.00)));
-	border-width: 0;
-	border-style: none;
-}
-
-
-/* Sliders and buttons */
-.scrollbar.slider.vertical,
-.scrollbar.button.vertical,
-.scrollbar.slider.horizontal,
-.scrollbar.button.horizontal {
-	background-image: -gtk-gradient (linear,
-		left top, right top,
-		from (@scrollslider_gradient_a),
-		to (@scrollslider_gradient_b));
-	background-color: @theme_base_color;
-	border-color: transparent;
-	border-radius: 10px;
-	border-width: 1px;
-}
-
-.scrollbar.slider.vertical:prelight,
-.scrollbar.slider.horizontal:prelight {
-	background-image: -gtk-gradient (linear,
-		left top, right top,
-		from (shade (@scrollslider_gradient_a, 0.90)),
-		to (shade (@scrollslider_gradient_b, 0.90)));
-	background-color: @theme_base_color;
-	border-color: transparent;
-	border-radius: 10px;
-	border-width: 1px;
-}
-
-.scrollbar.slider.vertical:prelight:active,
-.scrollbar.slider.horizontal:prelight:active {
-	background-image: -gtk-gradient (linear,
-		left top, right top,
-		from (shade (@scrollslider_gradient_a, 0.80)),
-		to (shade (@scrollslider_gradient_b, 0.80)));
-	background-color: @theme_base_color;
-	border-color: transparent;
-	border-radius: 10px;
-	border-width: 1px;
-}
-
-.scrollbar.slider:insensitive {
-	background-color: @theme_base_color;
-}
-
-.scrollbar.trough:insensitive {
-	background-color: shade (@theme_bg_color, 0.882);
-}
-
-
 /* Nautilus mods */
 
 /* sidebar */
